Adding Meta Tags

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <meta name="keywords" content="product manager, freelance, web developer, web development, software engineer, designer, new york, michael wang">
   <meta name="robots" content="index, follow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="Images/favicon.ico">
+  <link rel="icon" href="images/favicon.ico">
+  <meta property="og:title" content="mchlwng - Portfolio Site" />
+  <meta property="og:image" content="images/meta.png" />
+  <meta property="og:url" content="mchlwng" />
+  <meta property="og:type" content="portfolio" />
+  <meta property="og:description" content="Hey, I'm Michael, and I'm a Brooklyn-based product manager & designer." />
 
   <!-- FontAwesome -->
   <script src="https://kit.fontawesome.com/ea7fdacdbf.js" crossorigin="anonymous"></script>
