--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="icon" href="images/favicon.ico">
   <meta property="og:title" content="mchlwng - Portfolio Site" />
   <meta property="og:image" content="images/meta.png" />
-  <meta property="og:url" content="mchlwng" />
+  <meta property="og:url" content="mchlwng.com" />
   <meta property="og:type" content="portfolio" />
   <meta property="og:description" content="Hey, I'm Michael, and I'm a Brooklyn-based product manager & designer." />
 
