--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" prefix="og: http://ogp.me/ns#">
+<html lang="en" dir="ltr">
 
 
 <!-- Header -->
@@ -10,11 +10,11 @@
   <meta name="robots" content="index, follow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="images/favicon.ico">
-  <meta property="og:title" content="mchlwng - Portfolio Site" />
-  <meta property="og:image" content="images/meta.png" />
-  <meta property="og:url" content="mchlwng.com" />
-  <meta property="og:type" content="portfolio" />
-  <meta property="og:description" content="Hey, I'm Michael, and I'm a Brooklyn-based product manager & designer." />
+  <meta prefix="og: http://ogp.me/ns#" property="og:title" content="mchlwng - Portfolio Site" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:type" content="portfolio" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="images/meta.png" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:url" content="mchlwng.com" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Hey, I'm Michael, and I'm a Brooklyn-based product manager & designer." />
 
   <!-- FontAwesome -->
   <script src="https://kit.fontawesome.com/ea7fdacdbf.js" crossorigin="anonymous"></script>
