--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </body>
 
 <!-- Footer -->
-  <div style="position: absolute; width:100%; text-align:center; margin-left: auto; margin-right: auto; bottom:0px">
+  <div style="position: absolute; width:100%; text-align:center; margin-left: auto; margin-right: auto; top:0px">
       <p style="width: 100%; text-align: center;">
         © 2020 mchlwng, developed and designed by Michael Wang.
       </p>
