--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
   <meta name="keywords" content="product manager, freelance, web developer, web development, software engineer, designer, new york, michael wang">
   <meta name="robots" content="index, follow" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="images/favicon.ico">
-  <meta prefix="og: http://ogp.me/ns#" property="og:title" content="mchlwng - Portfolio Site" />
-  <meta prefix="og: http://ogp.me/ns#" property="og:type" content="portfolio" />
-  <meta prefix="og: http://ogp.me/ns#" property="og:image" content="images/meta.png" />
-  <meta prefix="og: http://ogp.me/ns#" property="og:url" content="mchlwng.com" />
-  <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Hey, I'm Michael, and I'm a Brooklyn-based product manager & designer." />
+  <meta property="og:title" content="mchlwng" />
+  <meta property="og:image" content="images/meta.png" />
+  <meta property="og:url" content="mchlwng" />
+  <meta property="og:description" content="Hey, I'm Michael, and I'm a Brooklyn-based product manager & designer." />
+  <link rel="icon" href="Images/favicon.ico">
 
   <!-- FontAwesome -->
   <script src="https://kit.fontawesome.com/ea7fdacdbf.js" crossorigin="anonymous"></script>
@@ -38,8 +37,7 @@
 <!-- Body -->
 <body>
   <div class="container-fluid">
-    <div class="section">
-      <div class="row">
+      <div class="row" style="margin: 0; position: absolute; top: 50%; -ms-transform: translateY(-50%); transform: translateY(-50%);">
         <div class="col-md-5 order-md-12 order-lg-12 col-lg-5 col-xl-6 title-text col">
             <img class="me" style="width: 300px;"src="images/me-standing.svg">
         </div>
@@ -59,7 +57,6 @@
               <i class="fab fa-github fa-lg social" title="github"></i>
             </a>
         </div>
-      </div>
     </div>
 
 
@@ -68,9 +65,4 @@
 </body>
 
 <!-- Footer -->
-  <div style="position: absolute; width:100%; text-align:center; margin-left: auto; margin-right: auto; top:0px">
-      <p style="width: 100%; text-align: center;">
-        © 2020 mchlwng, developed and designed by Michael Wang.
-      </p>
-  </div>
 </html>
