--- a/index.html
+++ b/index.html
@@ -36,27 +36,36 @@
 
 <!-- Body -->
 <body>
+
+  <!-- Title Section -->
   <div class="container-fluid">
-      <div class="row" style="margin: 0; position: absolute; top: 50%; -ms-transform: translateY(-50%); transform: translateY(-50%);">
-        <div class="col-md-5 order-md-12 order-lg-12 col-lg-5 col-xl-6 title-text col">
-            <img class="me" style="width: 300px;"src="images/me-standing.svg">
+    <div class="section" style="width: 100vw; margin: 0; position: absolute;  top: 50%; -ms-transform: translateY(-50%);transform: translateY(-50%);">
+      <div class="row">
+        <div class="col-md-5 order-md-12 order-lg-12 col-lg-5 col-xl-6 title-text">
+          <a href="index.html">
+            <img class="me" src="images/me-standing.svg" style="max-width:40vw;">
+          </a>
         </div>
         <div class="col-md-7 col-lg-7 col-xl-6 my-auto title-text">
+          <a href="index.html">
             <h1>Hello,<br />I'm Michael.</h1>
-            <h3>I'm still building my website, <br />but check back soon!</h3><br /> <br />
-            <a href="mailto:mwang@nyu.edu">
-              <i class="fas fa-envelope fa-lg social" title="email"></i>
-            </a>
-            <a href="http://www.linkedin.com/in/mchlwng">
-              <i class="fab fa-linkedin-in fa-lg social" title="linkedin"></i>
-            </a>
-            <a href="http://www.dribbble.com/mchlwng">
-              <i class="fab fa-dribbble fa-lg social" title="dribbble"></i>
-            </a>
-            <a href="http://www.github.com/mchlwng">
-              <i class="fab fa-github fa-lg social" title="github"></i>
-            </a>
+            <h3>I'm still working on my website. <br />Check back soon!</h3>
+          </a>
+          <br />
+          <a href="mailto:me@mchlwng.com">
+            <i class="fas fa-envelope fa-lg social" title="email"></i>
+          </a>
+          <a href="http://www.linkedin.com/in/mchlwng">
+            <i class="fab fa-linkedin-in fa-lg social" title="linkedin"></i>
+          </a>
+          <a href="http://www.dribbble.com/mchlwng">
+            <i class="fab fa-dribbble fa-lg social" title="dribbble"></i>
+          </a>
+          <a href="http://www.github.com/mchlwng">
+            <i class="fab fa-github fa-lg social" title="github"></i>
+          </a>
         </div>
+      </div>
     </div>
 
 
@@ -65,4 +74,6 @@
 </body>
 
 <!-- Footer -->
+
+
 </html>
