--- a/index.html
+++ b/index.html
@@ -36,14 +36,11 @@
 
 <!-- Body -->
 <body>
-
-  <!-- Title Section -->
   <div class="container-fluid">
-    <div class="section" style="width: 100vw; margin: 0; position: absolute;  top: 50%; -ms-transform: translateY(-50%);transform: translateY(-50%);">
-      <div class="row">
-        <div class="col-md-5 order-md-12 order-lg-12 col-lg-5 col-xl-6 title-text">
+      <div class="row" style=" margin: 0; position: absolute; top: 50%; -ms-transform: translateY(-50%); transform: translateY(-50%);">
+        <div class="col-md-5 order-md-12 order-lg-12 col-lg-5 col-xl-6 title-text col">
           <a href="index.html">
-            <img class="me" src="images/me-standing.svg" style="max-width:40vw;">
+            <img class="me" src="images/me-standing.svg" style="max-height:50vh;">
           </a>
         </div>
         <div class="col-md-7 col-lg-7 col-xl-6 my-auto title-text">
@@ -52,7 +49,8 @@
             <h3>I'm still working on my website. <br />Check back soon!</h3>
           </a>
           <br />
-          <a href="mailto:me@mchlwng.com">
+          <br />
+          <a href="mailto:mwang@nyu.edu">
             <i class="fas fa-envelope fa-lg social" title="email"></i>
           </a>
           <a href="http://www.linkedin.com/in/mchlwng">
@@ -66,14 +64,9 @@
           </a>
         </div>
       </div>
-    </div>
-
-
-
   </div>
-</body>
 
-<!-- Footer -->
+</body>
 
 
 </html>
