--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <meta property="og:image" content="images/meta.png" />
   <meta property="og:url" content="mchlwng" />
   <meta property="og:description" content="Hey, I'm Michael, and I'm a Brooklyn-based product manager & designer." />
-  <link rel="icon" href="Images/favicon.ico">
+  <link rel="icon" href="images/favicon.ico">
+  <link rel="shortcut icon" href="images/favicon.ico">
 
   <!-- FontAwesome -->
   <script src="https://kit.fontawesome.com/ea7fdacdbf.js" crossorigin="anonymous"></script>
@@ -37,7 +38,7 @@
 <!-- Body -->
 <body>
   <div class="container-fluid">
-      <div class="row" style=" margin: 0; position: absolute; top: 50%; -ms-transform: translateY(-50%); transform: translateY(-50%);">
+      <div class="row" style=" margin: 0; position: absolute; top: 45%; -ms-transform: translateY(-50%); transform: translateY(-50%);">
         <div class="col-md-5 order-md-12 order-lg-12 col-lg-5 col-xl-6 title-text col">
           <a href="index.html">
             <img class="me" src="images/me-standing.svg" style="max-height:50vh;">
@@ -50,7 +51,7 @@
           </a>
           <br />
           <br />
-          <a href="mailto:mwang@nyu.edu">
+          <a href="mailto:me@mchlwng.com">
             <i class="fas fa-envelope fa-lg social" title="email"></i>
           </a>
           <a href="http://www.linkedin.com/in/mchlwng">
