--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:url" content="mchlwng" />
   <meta property="og:description" content="Hey, I'm Michael, and I'm a Brooklyn-based product manager & designer." />
   <link rel="icon" href="images/favicon.ico">
-  <link rel="shortcut icon" href="images/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 
   <!-- FontAwesome -->
   <script src="https://kit.fontawesome.com/ea7fdacdbf.js" crossorigin="anonymous"></script>
