--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:image" content="images/meta.png" />
   <meta property="og:url" content="mchlwng" />
   <meta property="og:description" content="Hey, I'm Michael, and I'm a Brooklyn-based product manager & designer." />
-  <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
+  <link rel="icon" href="Images/favicon.ico">
 
   <!-- FontAwesome -->
   <script src="https://kit.fontawesome.com/ea7fdacdbf.js" crossorigin="anonymous"></script>
@@ -37,16 +37,16 @@
 <!-- Body -->
 <body>
   <div class="container-fluid">
-      <div class="row" style="margin: 0; position: absolute; top: 50%; -ms-transform: translateY(-50%); transform: translateY(-50%);">
+      <div class="row" style="margin: 0; position: absolute; top: 45%; -ms-transform: translateY(-50%); transform: translateY(-50%);">
         <div class="col-md-5 order-md-12 order-lg-12 col-lg-5 col-xl-6 title-text col">
           <a href="index.html">
             <img class="me" src="images/me-standing.svg" style="max-height:50vh; position:relative; right: 0;">
           </a>
         </div>
-        <div class="col-md-7 col-lg-7 col-xl-6 my-auto title-text">
+        <div class="col-md-7 col-lg-7 col-xl-6 my-auto title-text" style="padding: 10px 0;">
           <a href="index.html">
             <h1>Hello,<br />I'm Michael.</h1>
-            <h3>I'm still working on my website. <br />Check back soon!</h3>
+            <h3 style="margin:0">I'm still working on my website. <br />Check back soon!</h3>
           </a>
           <br />
           <br />
