--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="row" style="margin: 0; position: absolute; top: 45%; -ms-transform: translateY(-50%); transform: translateY(-50%);">
         <div class="col-md-5 order-md-12 order-lg-12 col-lg-5 col-xl-6 title-text col">
           <a href="index.html">
-            <img class="me" src="images/me-standing.svg" style="max-height:50vh; position:relative; right: 0;">
+            <img class="me" src="images/me-standing.svg" style="max-height:50vh; position:relative; right: 0; padding-top: 20px;">
           </a>
         </div>
         <div class="col-md-7 col-lg-7 col-xl-6 my-auto title-text" style="padding: 10px 0;">
