--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:image" content="images/meta.png" />
   <meta property="og:url" content="mchlwng" />
   <meta property="og:description" content="Hey, I'm Michael, and I'm a Brooklyn-based product manager & designer." />
-  <link rel="icon" type= "image/x-icon" href="Images/favicon.ico">
+  <link rel="shortcut icon" type= "image/x-icon" href="Images/favicon.ico">
 
   <!-- FontAwesome -->
   <script src="https://kit.fontawesome.com/ea7fdacdbf.js" crossorigin="anonymous"></script>
