--- a/navbar.html
+++ b/navbar.html
@@ -1,4 +1,9 @@
-<nav id="navbar" class="navbar navbar-expand-md navbar-light">
+<!DOCTYPE html>
+<html lang="en" dir="ltr"><head>
+    <link rel="stylesheet" href="css/bootstrap.css">
+      <link rel="stylesheet" href="css/styles.css">
+  </head><body>
+    <nav id="navbar" class="navbar navbar-expand-md navbar-light">
   <a class="navbar-brand" href="index.html">mchlwng</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
     <img id="burger" class="burger" src="images/burger-black.svg">
@@ -17,3 +22,5 @@
     </ul>
   </div>
 </nav>
+</body>
+</html>
