--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:image" content="images/meta.png" />
   <meta property="og:url" content="mchlwng" />
   <meta property="og:description" content="Hey, I'm Michael, and I'm a Brooklyn-based product manager & designer." />
-  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="Images/favicon.ico">
 
   <!-- FontAwesome -->
   <script src="https://kit.fontawesome.com/ea7fdacdbf.js" crossorigin="anonymous"></script>
@@ -30,23 +30,48 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
   <title>mchlwng</title>
+
+  <!-- Load Nav Bar -->
+  <script>
+    var prevScrollpos = window.pageYOffset;
+    window.onscroll = function() {
+    var currentScrollPos = window.pageYOffset;
+    if (window.pageYOffset == 0) {
+      document.getElementById("navbar").style.boxShadow = "none";
+      }
+    else if (prevScrollpos > currentScrollPos || prevScrollpos == 0) {
+        document.getElementById("navbar").style.top = "0px";
+        document.getElementById("navbar").style.boxShadow = "0 1px #e4e4e4";
+      }
+      else {
+        document.getElementById("navbar").style.top = "-50px";
+      }
+      prevScrollpos = currentScrollPos;
+    }
+  </script>
 </head>
 
 
 
 <!-- Body -->
-<body>
-  <div class="container-fluid" style="margin: 20px 0;">
-      <div class="row" style="margin: 0; position: absolute; top: 45%; -ms-transform: translateY(-50%); transform: translateY(-50%);">
-        <div class="col-md-5 order-md-12 order-lg-12 col-lg-5 col-xl-6 title-text col">
+<body  onload="myFunction()" style="margin:0;">
+
+  <!-- Title Section -->
+  <div id="loader"></div>
+  <div style="display:none;" id="myDiv" class="animate-bottom">
+
+  <div class="container">
+    <div class="section">
+      <div class="row index-header d-flex flex-wrap align-items-center">
+        <div class="col-md-5 order-md-12 title-text">
           <a href="index.html">
-            <img class="me" src="images/me-standing.svg" style="max-height:45vh; position:relative; right: 0; padding: 20px 0;">
+            <img class="me" src="images/me.svg">
           </a>
         </div>
-        <div class="col-md-7 col-lg-7 col-xl-6 my-auto title-text" style="padding: 0;">
+        <div class="col-md-7 title-text">
           <a href="index.html">
             <h1>Hello,<br />I'm Michael.</h1>
-            <h3 style="margin:0">I'm still working on my website. <br />Check back soon!</h3>
+            <h3>I'm still working on my website. <br />Stay tuned!</h3>
           </a>
           <br />
           <br />
@@ -64,9 +89,29 @@
           </a>
         </div>
       </div>
+    </div>
+    <script>
+      var myVar;
+      function myFunction() {
+        myVar = setTimeout(showPage, 500);
+      }
+      function showPage() {
+        document.getElementById("loader").style.display = "none";
+        document.getElementById("myDiv").style.display = "block";
+      }
+    </script>
   </div>
 
+<!-- Footer -->
+
 </body>
+
+<div class="row footer">
+    <p style="text-align: center">
+      © 2020 mchlwng, developed and designed by Michael Wang.
+    </p>
+</div>
+
 
 
 </html>
