--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="col-md-7 title-text">
           <a href="index.html">
             <h1>Hello,<br />I'm Michael.</h1>
-            <h3>I'm a product manager based in Brooklyn, New York.</h3>
+            <h3>I'm an NYC-based product manager.</h3>
           </a>
           <br />
           <br />
