--- a/index2.html
+++ b/index2.html
@@ -14,6 +14,7 @@
   <meta property="og:url" content="mchlwng" />
   <meta property="og:description" content="Hey, I'm Michael, and I'm a Brooklyn-based product manager & designer." />
   <link rel="shortcut icon" type="image/x-icon" href="Images/favicon.ico">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <!-- FontAwesome -->
   <script src="https://kit.fontawesome.com/ea7fdacdbf.js" crossorigin="anonymous"></script>
@@ -25,6 +26,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <!-- CSS Style Sheets -->
   <link rel="stylesheet" href="css/bootstrap.css">
@@ -32,7 +34,18 @@
   <title>mchlwng</title>
 
   <!-- Load Nav Bar -->
-  <script>
+  <div id="nav-placeholder">
+
+</div>
+
+<script>
+$(function(){
+  $("#nav-placeholder").load("nav.html");
+});
+</script>
+
+
+<script>
     var prevScrollpos = window.pageYOffset;
     window.onscroll = function() {
     var currentScrollPos = window.pageYOffset;
@@ -56,27 +69,11 @@
 <!-- Body -->
 <body  onload="myFunction()" style="margin:0;">
 
-  <nav id="navbar" class="navbar navbar-expand-md navbar-light">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">mchlwng</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
-        <img id="burger" class="burger" src="images/burger-black.svg">
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">ABOUT</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#mywork">WORK</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contact">CONTACT</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<script type="application/javascript" src="nav.js"></script>
+<div class="navbar-frame"></div>
+
+
+      <div id='menu' />
 
   <!-- Title Section -->
   <div id="loader"></div>
