--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <!-- CSS Style Sheets -->
   <link rel="stylesheet" href="css/bootstrap.css">
@@ -32,24 +33,13 @@
   <title>mchlwng</title>
 
   <!-- Load Nav Bar -->
+  <div id="nav"></div>
+
   <script>
-    var prevScrollpos = window.pageYOffset;
-    window.onscroll = function() {
-    var currentScrollPos = window.pageYOffset;
-    if (window.pageYOffset == 0) {
-      document.getElementById("navbar").style.boxShadow = "none";
-      }
-    else if (prevScrollpos > currentScrollPos || prevScrollpos == 0) {
-        document.getElementById("navbar").style.top = "0px";
-        document.getElementById("navbar").style.boxShadow = "0 1px #e4e4e4";
-      }
-      else {
-        document.getElementById("navbar").style.top = "-50px";
-      }
-      prevScrollpos = currentScrollPos;
-    }
+    $(function(){
+      $("#nav").load("nav.html");
+    });
   </script>
-</head>
 
 
 
@@ -107,7 +97,7 @@
 </body>
 
 <div class="row footer">
-    <p style="text-align: center">
+    <p>
       © 2020 mchlwng, developed and designed by Michael Wang.
     </p>
 </div>
