--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
   <title>mchlwng</title>
 
   <!-- Load Nav Bar -->
-  <div id="nav"></div>
+  <div id="navbar"></div>
 
   <script>
     $(function(){
-      $("#nav").load("nav.html");
+      $("#navbar").load("nav.html");
     });
   </script>
 
