--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 <div class="row footer">
     <p>
-      © 2020 mchlwng, developed and designed by Michael Wang.
+      <br><Br>© 2020 mchlwng, developed and designed by Michael Wang.
     </p>
 </div>
 
