--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
   <title>mchlwng</title>
 
   <!-- Load Nav Bar -->
-  <div id="nav"></div>
+  <!-- <div id="nav"></div>//
 
   <script>
     $(function(){
       $("#nav").load("nav.html");
     });
-  </script>
+  </script> -->
 
 
 <!-- Body -->
